add script file

--- a/index.html
+++ b/index.html
@@ -6,8 +6,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>Document</title>
+    
 </head>
 <body>
+    <script>
+        const words = [
+  "drzewo",
+  "kot",
+  "pies",
+  "samochód",
+  "książka",
+  "słońce",
+  "chmura",
+  "deszcz",
+  "kieliszek",
+  "szklanka",
+  "słuchawki",
+  "komputer",
+  "monitor",
+  "mysz",
+  "klawiatura",
+  "telefon",
+  "aparat",
+  "fotel",
+  "kanapa",
+  "stół",
+  "krzesło",
+  "lampa",
+  "zegar",
+  "obraz",
+  "dywan",
+  "łóżko",
+  "szafa",
+  "szafka",
+  "szafka nocna",
+  "płyta",
+  "odtwarzacz",
+  "konsola",
+  "gry",
+  "television",
+  "telewizor",
+  "radio",
+  "głośnik",
+  "kamera",
+  "aparat fotograficzny",
+  "obiektyw",
+  "fotografia",
+  "fotograf",
+  "płyta CD",
+  "płyta DVD",
+  "odtwarzacz DVD",
+  "kino domowe",
+  "speaker",
+  "słuchawki bezprzewodowe",
+  "słuchawki Bluetooth",
+  "smartfon",
+  "tablet",
+  "laptop",
+  "komputer stacjonarny",
+  "drukarka",
+  "skaner",
+  "ksero",
+  "ploter",
+  "urządzenie wielofunkcyjne",
+  "kopiarka",
+  "ekspres do kawy",
+  "czajnik",
+  "toster",
+  "kuchenka",
+  "kuchenka mikrofalowa",
+  "lodówka",
+  "zmywarka",
+  "odkurzacz",
+  "pralka",
+  "suszarka",
+  "żelazko",
+  "deska do prasowania",
+  "mopa",
+  "szczotka",
+  "odświeżacz powietrza",
+  "środek do czyszczenia",
+  "proszek do prania",
+  "żel do mycia naczyń",
+  "środek do czyszczenia WC",
+  "mydło",
+  "szampon",
+  "odżywka",
+  "żel pod prysznic",
+  "de"]
+  console.log(words.length);
+</script>
     <h1>WOW MEGA</h1>
 </body>
 </html>
