--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1>WOW MEGA</h1>
-    <h3>TEST</h3>
+    <section>
+        <div class="fill-1">
+            <div class="button-1"></div>
+        </div>
+    </section>
+    <section>
+        
+    </section>
 </body>
 </html>
