--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    <!-- section 1 -->
     <section>
         <div class="fill-1">
-            <div class="button-1"></div>
+            <div class="button-1" id="button-1"><p class="button-text-1">do flip</p></div>
         </div>
     </section>
+    <!-- section 2 -->
     <section>
         
     </section>
