--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    
     <!-- section 1 -->
+
     <section>
         <div class="fill-1">
             <div class="button-1" id="button-1"><p class="button-text-1">do flip</p></div>
         </div>
     </section>
+
     <!-- section 2 -->
+
     <section>
-        
+        <div class="fill-2">
+            <div class="square-2" id="square-2"></div>
+            <input class="slider-2 width-2" id="width-2" type="range" value="250" min="1" max="500"> 
+            <input class="slider-2 height-2" id="height-2" type="range" value="250" min="1" max="500"> 
+        </div>
     </section>
 </body>
 </html>
