--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <section>
         <div class="fill-1">
-            <div class="button-1" id="button-1"><p class="button-text-1">do flip</p></div>
+            <div class="button-1" id="button-1"><p class="button-text-1">DO FLIP</p></div>
         </div>
     </section>
 
@@ -25,6 +25,20 @@
             <div class="square-2" id="square-2"></div>
             <input class="slider-2 width-2" id="width-2" type="range" value="250" min="1" max="500"> 
             <input class="slider-2 height-2" id="height-2" type="range" value="250" min="1" max="500"> 
+        </div>
+    </section>
+
+    <!-- section 3 -->
+
+    <section>
+        <div class="fill-3">
+                <p class="display-3" id="display-3"></p>
+                <div class="main-button-3" id="main-button-3">CLICK ME</div>
+                <!-- <div class="button-wraper-3" id="button-1-3">
+                    <p class="multiplier-3"></p>
+                    <div class="button-3">AUTO CLICK</div>
+                    <p class="price-3"></p>
+                </div> -->
         </div>
     </section>
 </body>
