--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
         <div class="fill-3">
                 <p class="display-3" id="display-3"></p>
                 <div class="main-button-3" id="main-button-3">CLICK ME</div>
-                <!-- <div class="button-wraper-3" id="button-1-3">
+                <div class="button-wraper-3" id="button-1-3">
                     <p class="multiplier-3"></p>
                     <div class="button-3">AUTO CLICK</div>
-                    <p class="price-3"></p>
-                </div> -->
+                </div>
         </div>
     </section>
 </body>
