--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="button-wraper-3" id="button-2-3">
                         <p class="multiplier-3"></p>
-                        <div class="button-3">AUTO CLICK</div>
+                        <div class="button-3">BETTER CLICK</div>
                     </div>
                 </div>
         </div>
