--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                         <p class="multiplier-3"></p>
                         <div class="button-3">BETTER CLICK</div>
                     </div>
+                    <div class="button-wraper-3" id="button-3-3">
+                        <p class="multiplier-3"></p>
+                        <div class="button-3">RANDOM GIFT</div>
+                    </div>
                 </div>
         </div>
     </section>
