--- a/index.html
+++ b/index.html
@@ -50,5 +50,14 @@
                 </div>
         </div>
     </section>
+
+    <!-- section 4 -->
+
+    <section>
+        <div class="fill-4">
+            <div id="button-4" class="button-4">RANDOM</div>
+            <div id="shape-4" class="shape-4"></div>
+        </div>
+    </section>
 </body>
 </html>
