--- a/index.html
+++ b/index.html
@@ -59,5 +59,19 @@
             <div id="shape-4" class="shape-4"></div>
         </div>
     </section>
+
+    <!-- section 5 -->
+
+    <section>
+        <div class="fill-5">
+            <div class="square-5" id="square-5"></div>
+            <p class="display-5" id="display-5">rgb(127, 127, 127)</p>
+            <div class="slider-wraper-5">
+                <input class="slider-5" id="slider-1-5" type="range" value="127" min="0" max="255"> 
+                <input class="slider-5" id="slider-2-5" type="range" value="127" min="0" max="255"> 
+                <input class="slider-5" id="slider-3-5" type="range" value="127" min="0" max="255"> 
+            </div>
+        </div>
+    </section>
 </body>
 </html>
