--- a/index.html
+++ b/index.html
@@ -73,5 +73,14 @@
             </div>
         </div>
     </section>
+
+    <!-- section 6 -->
+
+    <section>
+        <div class="fill-6">
+            <div class="div-6" id="div-6">0%</div>
+            <input class="slider-6" id="slider-6" type="range" value="0" min="0" max="50"> 
+        </div>
+    </section>
 </body>
 </html>
