--- a/index.html
+++ b/index.html
@@ -82,5 +82,33 @@
             <input class="slider-6" id="slider-6" type="range" value="0" min="0" max="50"> 
         </div>
     </section>
+
+    <!-- section 7 -->
+
+    <section id="section-7">
+        <div class="fill-7">
+            <div class="body-7">
+                <div class="display-7" id="display-7"></div>
+                <div class="button-7 number">9</div>
+                <div class="button-7 number">8</div>
+                <div class="button-7 number">7</div>
+                <div class="button-7 number">6</div>
+                <div class="button-7 number">5</div>
+                <div class="button-7 number">4</div>
+                <div class="button-7 number">3</div>
+                <div class="button-7 number">2</div>
+                <div class="button-7 number">1</div>
+                <div class="button-7 clean">C</div>
+                <div class="button-7 number">0</div>
+                <div class="button-7 operation">+</div>
+                <div class="button-7 operation">-</div>
+                <div class="button-7 operation">:</div>
+                <div class="button-7 operation">*</div>
+                <div class="button-7 equal">=</div>
+                <!-- <div class="button-7 minus">- / +</div> -->
+                <!-- <div class="button-7 dot">.</div> -->
+            </div>
+        </div>
+    </section>
 </body>
 </html>
