--- a/index.html
+++ b/index.html
@@ -104,9 +104,8 @@
                 <div class="button-7 operation">-</div>
                 <div class="button-7 operation">:</div>
                 <div class="button-7 operation">*</div>
+                <div class="button-7 minus">- / +</div>
                 <div class="button-7 equal">=</div>
-                <!-- <div class="button-7 minus">- / +</div> -->
-                <!-- <div class="button-7 dot">.</div> -->
             </div>
         </div>
     </section>
