--- a/index.html
+++ b/index.html
@@ -109,5 +109,14 @@
             </div>
         </div>
     </section>
+
+    <!-- section 8 -->
+
+    <section>
+        <div class="fill-8">
+            <div class="coin-8" id="coin-8">EAGLE</div>
+            <div class="button-8" id="button-8">FLIP</div>
+        </div>
+    </section>
 </body>
 </html>
