--- a/index.html
+++ b/index.html
@@ -123,8 +123,19 @@
 
     <section>
         <div class="fill-9">
-            <input type="text" class="input-9" id="input-9" placeholder="SIMPLE ENCRYPTION">
-            <div class="button-9" id="button-9">ENCRYPT</div>
+            <input type="text" class="input-9" id="input-9" placeholder="WRITE HERE">
+            <div class="button-9" id="button-9">REVERSE</div>
+        </div>
+    </section>
+
+    <!-- section 10 -->
+
+    <section>
+        <div class="fill-10">
+            <input type="number" class="input-10" id="min-10" placeholder="MIN">
+            <input type="number" class="input-10" id="max-10" placeholder="MAX">
+            <div class="button-10" id="button-10">RANDOM NUMBER</div>
+            <div class="display-10"></div>
         </div>
     </section>
 </body>
