--- a/index.html
+++ b/index.html
@@ -138,5 +138,15 @@
             <div class="display-10"></div>
         </div>
     </section>
+
+    <!-- sectio 11 -->
+
+    <section>
+        <div class="fill-11">
+            <div class="display-11">00:00:00</div>
+            <div class="button-11" id="button-1-11">START</div>
+            <div class="button-11" id="button-2-11">RESET</div>
+        </div>
+    </section>
 </body>
 </html>
