--- a/index.html
+++ b/index.html
@@ -148,5 +148,14 @@
             <div class="button-11" id="button-2-11">RESET</div>
         </div>
     </section>
+
+    <!-- section 12 -->
+
+    <section>
+        <div class="fill-12">
+            <input type="text" class="input-12" placeholder="WRITE HERE">
+            <div class="button-12">READ</div>
+        </div>
+    </section>
 </body>
 </html>
