--- a/index.html
+++ b/index.html
@@ -157,5 +157,24 @@
             <div class="button-12">READ</div>
         </div>
     </section>
+
+    <!-- section 13 -->
+
+    <section>
+        <div class="fill-13">
+            <div class="circles-wraper-13">
+                <div class="circle-13" id="circle-13-1"></div>
+                <div class="circle-13" id="circle-13-2"></div>
+                <div class="circle-13" id="circle-13-3"></div>
+                <div class="circle-13" id="circle-13-4"></div>
+                <div class="circle-13" id="circle-13-5"></div>
+                <div class="circle-13" id="circle-13-6"></div>
+                <div class="circle-13" id="circle-13-7"></div>
+                <div class="circle-13" id="circle-13-8"></div>
+                <div class="circle-13" id="circle-13-9"></div>
+            </div>
+            <div class="button-13">START</div>
+        </div>
+    </section>
 </body>
 </html>
