--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
     <section>
         <div class="fill-13">
             <div class="circles-wraper-13">
-                <div class="circle-13" id="circle-13-1"></div>
-                <div class="circle-13" id="circle-13-2"></div>
-                <div class="circle-13" id="circle-13-3"></div>
-                <div class="circle-13" id="circle-13-4"></div>
-                <div class="circle-13" id="circle-13-5"></div>
-                <div class="circle-13" id="circle-13-6"></div>
-                <div class="circle-13" id="circle-13-7"></div>
-                <div class="circle-13" id="circle-13-8"></div>
-                <div class="circle-13" id="circle-13-9"></div>
+                <button class="circle-13" id="circle-13-1"></button>
+                <button class="circle-13" id="circle-13-2"></button>
+                <button class="circle-13" id="circle-13-3"></button>
+                <button class="circle-13" id="circle-13-4"></button>
+                <button class="circle-13" id="circle-13-5"></button>
+                <button class="circle-13" id="circle-13-6"></button>
+                <button class="circle-13" id="circle-13-7"></button>
+                <button class="circle-13" id="circle-13-8"></button>
+                <button class="circle-13" id="circle-13-9"></button>
             </div>
             <div class="button-13">START</div>
         </div>
