style update and small fix

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <!-- section 1 -->
 
     <section>
-        <div class="fill-1">
-            <div class="button-1" id="button-1"><p class="button-text-1">DO FLIP</p></div>
+        <div class="fill flex-center bc-blue">
+            <div class="button bc-yellow c-blue bc-hover-orange" id="button-1">DO FLIP</div>
         </div>
     </section>
 
     <!-- section 2 -->
 
     <section>
-        <div class="fill-2">
-            <div class="square-2" id="square-2"></div>
-            <input class="slider-2 width-2" id="width-2" type="range" value="250" min="1" max="500"> 
-            <input class="slider-2 height-2" id="height-2" type="range" value="250" min="1" max="500"> 
+        <div class="fill relative bc-orange">
+            <div class="square bc-pink square-2" id="square-2"></div>
+            <input class="slider bc-blue width-2 slider-2" id="width-2" type="range" value="250" min="1" max="500"> 
+            <input class="slider bc-blue height-2 slider-2" id="height-2" type="range" value="250" min="1" max="500"> 
         </div>
     </section>
 
@@ -54,9 +54,9 @@
     <!-- section 4 -->
 
     <section>
-        <div class="fill-4">
-            <div id="button-4" class="button-4">RANDOM</div>
-            <div id="shape-4" class="shape-4"></div>
+        <div class="fill flex-column-center bc-dark">
+            <div id="shape-4" class="square bc-pink"></div>
+            <div id="button-4" class="button bc-blue c-yellow bc-hover-pink margin-top-4">RANDOM</div>
         </div>
     </section>
 
