--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     <!-- section 5 -->
 
     <section>
-        <div class="fill-5">
-            <div class="square-5" id="square-5"></div>
+        <div class="fill relative bc-yellow">
+            <div class="square square-5" id="square-5"></div>
             <p class="display-5" id="display-5">rgb(127, 127, 127)</p>
             <div class="slider-wraper-5">
-                <input class="slider-5" id="slider-1-5" type="range" value="127" min="0" max="255"> 
-                <input class="slider-5" id="slider-2-5" type="range" value="127" min="0" max="255"> 
-                <input class="slider-5" id="slider-3-5" type="range" value="127" min="0" max="255"> 
+                <input class="slider bc-blue slider-5" id="slider-1-5" type="range" value="127" min="0" max="255"> 
+                <input class="slider bc-blue slider-5" id="slider-2-5" type="range" value="127" min="0" max="255"> 
+                <input class="slider bc-blue slider-5" id="slider-3-5" type="range" value="127" min="0" max="255"> 
             </div>
         </div>
     </section>
@@ -77,9 +77,9 @@
     <!-- section 6 -->
 
     <section>
-        <div class="fill-6">
-            <div class="div-6" id="div-6">0%</div>
-            <input class="slider-6" id="slider-6" type="range" value="0" min="0" max="50"> 
+        <div class="fill bc-blue relative">
+            <div class="square bc-yellow square-6" id="div-6">0%</div>
+            <input class="slider bc-yellow slider-6" id="slider-6" type="range" value="0" min="0" max="50"> 
         </div>
     </section>
 
@@ -124,7 +124,7 @@
     <section>
         <div class="fill-9">
             <input type="text" class="input-9" id="input-9" placeholder="WRITE HERE">
-            <div class="button-9" id="button-9">REVERSE</div>
+            <div class="button bc-yellow c-dark bc-hover-orange" id="button-9">REVERSE</div>
         </div>
     </section>
 
@@ -134,7 +134,7 @@
         <div class="fill-10">
             <input type="number" class="input-10" id="min-10" placeholder="MIN">
             <input type="number" class="input-10" id="max-10" placeholder="MAX">
-            <div class="button-10" id="button-10">RANDOM NUMBER</div>
+            <div class="button bc-yellow c-pink bc-hover-orange" id="button-10">RANDOM NUMBER</div>
             <div class="display-10"></div>
         </div>
     </section>
@@ -144,8 +144,8 @@
     <section>
         <div class="fill-11">
             <div class="display-11">00:00:00</div>
-            <div class="button-11" id="button-1-11">START</div>
-            <div class="button-11" id="button-2-11">RESET</div>
+            <div class="button bc-blue c-yellow bc-hover-pink margin-bottom-11" id="button-1-11">START</div>
+            <div class="button bc-blue c-yellow bc-hover-pink margin-bottom-11" id="button-2-11">RESET</div>
         </div>
     </section>
 
@@ -154,7 +154,7 @@
     <section>
         <div class="fill-12">
             <input type="text" class="input-12" placeholder="WRITE HERE">
-            <div class="button-12">READ</div>
+            <div class="button bc-yellow c-pink bc-hover-orange">READ</div>
         </div>
     </section>
 
